doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;D:\Hidden Desktop\OneDrive\Cross Device\Work\CO520\BlueJ Projects\A4 src.src.Reversi\src.src.Reversi
-d
D:\Hidden Desktop\OneDrive\Cross Device\Work\CO520\BlueJ Projects\A4 src.src.Reversi\src.src.Reversi\doc
-encoding
UTF-8
-charset
UTF-8
D:\Hidden Desktop\OneDrive\Cross Device\Work\CO520\BlueJ Projects\A4 src.src.Reversi\src.src.Reversi\MoveChecker.java
<---- end of javadoc command ---->
Loading source file D:\Hidden Desktop\OneDrive\Cross Device\Work\CO520\BlueJ Projects\A4 src.src.Reversi\src.src.Reversi\MoveChecker.java...
D:\Hidden Desktop\OneDrive\Cross Device\Work\CO520\BlueJ Projects\A4 src.src.Reversi\src.src.Reversi\MoveChecker.java:16: error: illegal start of expression
        .
        ^
1 error
